<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/score_display"
        android:layout_width="216dp"
        android:layout_height="145dp"
        android:layout_marginTop="32dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="#191847"
        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />

    <TextView
        android:id="@+id/pts"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pts"
        android:textAlignment="textStart"
        android:textColor="#191847"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/scan_button"
        app:layout_constraintStart_toEndOf="@+id/score_display"
        tools:ignore="TextViewEdits,VisualLintBounds" />

    <TextView
        android:id="@+id/your_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/your_rank"
        android:textColor="#191847"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_display"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/my_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/_9999"
        android:textColor="#191847"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_display"
        tools:ignore="VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/scan_button"
        app:layout_constraintStart_toStartOf="@+id/scan_button"
        app:layout_constraintTop_toTopOf="@+id/scan_button"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/scan_now"
        android:layout_width="130dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:elevation="200dp"
        android:gravity="top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/scan_now"
        android:textAppearance="@style/scan_now"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/scan_button"
        app:layout_constraintEnd_toEndOf="@+id/scan_button"
        app:layout_constraintTop_toTopOf="@+id/scan_button"
        app:layout_constraintVertical_bias="0.68"
        tools:ignore="VisualLintOverlap,TextContrastCheck" />

    <View
        android:id="@+id/scan_button"
        android:layout_width="232dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_1"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_ranking"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/rectangle_2"
        android:layout_width="325dp"
        android:layout_height="86dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/rectangle_2"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_use"
        android:layout_width="286dp"
        android:layout_height="29dp"
        android:elevation="200dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-12sp"
        android:text="@string/welcome_use"
        android:textAppearance="@style/welcome_use"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintVertical_bias="0.456" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/ask_button"
        app:layout_constraintEnd_toEndOf="@+id/ask_button"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="@+id/ask_button"
        app:layout_constraintTop_toTopOf="@+id/ask_button"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/askbutton" />

    <View
        android:id="@+id/ask_button"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ellipse_494"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>