...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#FFFFFF">
        <TextView
            android:id="@+id/buttonTotalScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:clickable="true"
            android:layout_weight="1"
            android:gravity="center"
...
