...

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:elevation="200sp"
        app:layout_constraintBottom_toBottomOf="@+id/search_bar"
        app:layout_constraintEnd_toStartOf="@+id/search_text"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toTopOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/ic_search"
...
