...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_user"

            android:layout_width="283dp"
            android:layout_height="83dp"
            android:elevation="50dp"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
...
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="TODO"
            android:elevation="200dp"
            app:layout_constraintBottom_toBottomOf="@+id/ask_button"
            app:layout_constraintEnd_toEndOf="@+id/ask_button"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toStartOf="@+id/ask_button"
            app:layout_constraintTop_toTopOf="@+id/ask_button"
            app:layout_constraintVertical_bias="0.571"
            app:srcCompat="@drawable/img_1" />
...
