<resources>

    <string name="testing">Testing...</string>
    <string name="choose_your">SEARCH USERNAME:</string>
    <string name="user_name">ENTER USER NAME</string>
    <string name="qr_code">QR CODE</string>
    <string name="searching">SEARCH</string>

    <string name="app_name">QR Code Hunter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">score</string>
    <string name="accountCreated">dxxzc-accountCreated-vzxvzs</string>

    <string name="_9999">#9999</string>
    <string name="your_rank">Your Rank:</string>
    <string name="pts">PTS</string>
    <string name="_0">0</string>
    <string name="scan_now">Scan Now</string>
    <string name="welcome_use">WELCOME,  USERNAME !</string>
    <string name="api_key">AIzaSyAWw-jZVejLgBsAkmiF9Pc4wGVvKp8yp-Q</string>

    <string name="no_results_found">NO RESULTS FOUND</string>

    <string name="invalidEmail">Invalid email adress, please re-enter</string>
    <string name="invalidNumber">Invalid number, please re-enter</string>
    <string name="userNameTaken">This username has been taken, please choose another</string>
    <string name="userNameLength">This username is not between 0 - 13 characters</string>
    <string name="userNameInvalidCharacters">This username can only contain letters and numbers</string>
    <string name="next">Next</string>

</resources>